# HappyNoob

./: .gitignore  ReadMe.txt  xuexi.7z  彩票数据爬取.py
ActiveX控件测试容器(TstCon32.exe)/: TCProps.lib
AutoWriteWaterLevel/: AutoWriteWaterLevel.sln
AutoWriteWaterLevel/AutoWriteWaterLevel/: AutoWriteWaterLevel.py  AutoWriteWaterLevel.pyproj  waterLevel.xls
Bad注码法/ConsoleApplication6/: ConsoleApplication6.cpp  _bbbp_h.h
Bad注码法/Debug/: ConsoleApplication6.ilk
ClockTest/ClockTest/: CDClock.h  ClockTest.cpp  ClockTest.h  ClockTestDlg.cpp  ClockTestDlg.h
Demo/: app copy 2.py  app copy.py  app.py  pyproject.toml  reqirements.txt
Demo/static/css/: index.css  index.less
Demo/templates/: index.html
DlgRun/DlgRun/: CNewButton.cpp  CNewButton.h  DlgRun.rc  DlgRun.vcxproj.filters  DlgRunDlg.cpp  DlgRunDlg.h
FxxkCH/eckarts_open_class-master/: app.py  ch.js  test.py
GPDialog/GPDialog/: 1.bat  2.bat  GPDialog.sln  组策略加固批处理.bat
Graphic/: Graphic.sln
Graphic/Graphic/: ChildFrm.cpp  ClassView.cpp  ClassView.h  FileView.cpp  Graphic.cpp  Graphic.h  Graphic.rc  Graphic.vcxproj  Graphic.vcxproj.filters  GraphicDoc.cpp  GraphicView.cpp  GraphicView.h  MainFrm.cpp  PropertiesWnd.cpp  resource.h
Graphic3/: 222.txt
MFC/Style/: Style.sln
Menu2/: Menu2.sln
Mybole/: Mybole.sln
Prop/: Prop.sln
Python3自动填表Demo/: PythonApplication3.sln
VBWinFormsApp/: VBWinFormsApp.sln
ch13/: ch13.sln
ch15/: ch15.sln
ch16/: ch16.sln
ch17/: ch17.sln
ch18/: ch18.sln
ch20/: ch20.sln
ch21/: ch21.sln
pythonProject1/: main.py
xuexi/: xuexi.rar
测试学习/: 测试学习.sln
船舶识别/: 船舶识别.sln
(+545 files in other folders)
